# py_zkp

./: Makefile  README.md  pyproject.toml
py_zkp/groth16/: code_to_r1cs.py  poly_utils.py  proving.py  qap_creator.py  qap_creator_lcm.py
py_zkp/plonk/: setup.py
tests/: test.py  test_plonk.py
